Handling stuck status in BDI agent #49